--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/index.jsx", "app/_layout.jsx"  ]
+, "app/index.jsx", "app/_layout.jsx", "app/(auth)/_layout.jsx", "app/(auth)/sign-up.jsx", "app/(auth)/sign-in.jsx"  ]
 }
