--- a/package.json
+++ b/package.json
@@ -23,24 +23,26 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "cloudinary-react": "^1.8.1",
-    "expo": "~52.0.23",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image-picker": "~16.0.5",
+    "expo": "~52.0.36",
+    "expo-blur": "~14.0.3",
+    "expo-constants": "~17.0.7",
+    "expo-font": "~13.0.4",
+    "expo-haptics": "~14.0.1",
+    "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.3",
     "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.6",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
+    "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.1.0",
-    "lottie-react-native": "^7.2.2",
+    "jest-expo": "~52.0.5",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.0.0",
     "react-native-reanimated": "~3.16.1",
@@ -59,7 +61,7 @@
     "@types/react-test-renderer": "^18.3.0",
     "expo-router": "^4.0.15",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.5",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
