--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@clerk/clerk-react": "^5.22.11",
     "@clerk/shared": "^2.20.18",
     "@expo/vector-icons": "^14.0.2",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "cloudinary-react": "^1.8.1",
     "expo": "~52.0.36",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
     "expo-font": "~13.0.4",
@@ -36,13 +38,12 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.1",
-    "firebase": "^11.1.0",
+    "firebase": "^11.3.1",
     "jest-expo": "~52.0.5",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^8.0.0",
     "react-native-reanimated": "~3.16.1",
@@ -59,6 +60,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo-router": "^4.0.15",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
