--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,23 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".", // Required for path resolution
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@configs/*": ["configs/*"], // Matches your Babel alias
+      "@components/*": ["components/*"], // Example additional alias
+      "@/*": ["./*"] // Optional root alias
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "**/*.jsx", // Include all JSX files
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/index.jsx", "app/_layout.jsx", "app/(auth)/_layout.jsx", "app/(auth)/sign-up.jsx", "app/(auth)/sign-in.jsx"  ]
+    "expo-env.d.ts",
+    "app/index.jsx",
+    "app/_layout.jsx",
+    "app/(auth)/_layout.jsx",
+    "app/(auth)/sign-up.jsx",
+    "app/(auth)/sign-in.jsx"
+  ]
 }
