Removed unwanted consoles

--- a/app.json
+++ b/app.json
@@ -35,7 +35,8 @@
         }
       ],
       "expo-secure-store",
-      "expo-font"
+      "expo-font",
+      "expo-asset"
     ],
     "experiments": {
       "typedRoutes": true
