--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,17 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "baseUrl": ".", // Required for path resolution
+    "baseUrl": ".", 
     "paths": {
-      "@configs/*": ["configs/*"], // Matches your Babel alias
-      "@components/*": ["components/*"], // Example additional alias
-      "@/*": ["./*"] // Optional root alias
+      "@configs/*": ["configs/*"], 
+      "@components/*": ["components/*"], 
+      "@/*": ["./*"] 
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "**/*.jsx", // Include all JSX files
+    "**/*.jsx", 
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "app/index.jsx",
